# Iridium

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Info.plist.in  Iridium.pro  MyApp.rc  README.md  application.qrc  conanfile.py
.github/workflow/: build.yml
.github/workflows/: build.yml
icons/fluent/: index.theme
images/: app.icns
languages/: iridium_en.ts
ressources/: Iridium.icns
src/: main.cpp
src/AddNewRemote/: ChoseRemoteDialog.cpp  ChoseRemoteDialog.hpp
src/AddNewRemote/RemoteFrame/: GoogleDriveRemoteFrame.cpp  GoogleDriveRemoteFrame.hpp  RemoteFrame.cpp  RemoteFrame.hpp
src/Application/: IridiumApp.cpp  IridiumApp.hpp
src/Config/: Config.h  Global.cpp  Global.hpp  Settings.cpp  Settings.hpp  Variable.cpp  Variable.hpp  Version.h  Version.h.in
src/FileView/: FileViewWidget.cpp  FileViewWidget.hpp
src/FileView/TreeWidgets/: ItemInfoDialog.cpp  ItemInfoDialog.hpp  ItemMenu.cpp  ItemMenu.hpp  RcloneFileModel.cpp  RcloneFileModel.hpp  RcloneFileModelDistant.cpp  RcloneFileModelDistant.hpp  RcloneFileModelLocal.cpp  RcloneFileModelLocal.hpp  RcloneProxy.cpp  RcloneProxy.hpp  TreeFileItem.cpp  TreeFileItem.hpp  TreeFileItemDistant.cpp  TreeFileItemDistant.hpp  TreeFileItemLocal.cpp  TreeFileItemLocal.hpp  TreeFileLocalWidget.cpp  TreeFileLocalWidget.hpp  TreeFileView.cpp  TreeFileView.hpp  TreeFileViewContainer.cpp  TreeFileViewContainer.hpp  TreeFileWidget.cpp  TreeFileWidget.hpp
src/MainWindow/: ExplorerWidget.cpp  ExplorerWidget.hpp  MainWidget.cpp  MainWidget.hpp  MainWindow.cpp  MainWindow.hpp  SearchWidget.cpp  SearchWidget.hpp  SyncWidget.cpp  SyncWidget.hpp  ToolBar.cpp  ToolBar.hpp
src/MainWindow/Menu/: MenuBar.cpp  MenuBar.hpp  SettingsDialog.cpp  SettingsDialog.hpp
src/MainWindow/Menu/Settings/: AppearanceFrame.cpp  AppearanceFrame.hpp  FolderColorGroupBox.cpp  FolderColorGroupBox.hpp  GeneralFrame.cpp  GeneralFrame.hpp  RcloneFrame.cpp  RcloneFrame.hpp  SettingsButton.cpp  SettingsButton.hpp
src/Other/: CircularProgressBar.cpp  CircularProgressBar.hpp  EscDiasableDialog.hpp  FileDownloader.cpp  FileDownloader.hpp  FilterGroupBox.cpp  FilterGroupBox.hpp  ImagePreviewDialog.cpp  ImagePreviewDialog.hpp  InfoWidget.cpp  InfoWidget.hpp  InfoWidgetsDialog.cpp  InfoWidgetsDialog.hpp  LinearProgressBar.cpp  LinearProgressBar.hpp  Preview.cpp  Preview.hpp  ProgressBar.cpp  ProgressBar.hpp  RoundedButton.cpp  RoundedButton.hpp  RoundedLineEdit.cpp  RoundedLineEdit.hpp  SyncProgressBarDelegate.cpp  SyncProgressBarDelegate.hpp
src/Rclone/: Rclone.cpp  Rclone.hpp  RcloneFile.cpp  RcloneFile.hpp  RcloneNotFoundWidget.cpp  RcloneNotFoundWidget.hpp  RclonesManager.cpp  RclonesManager.hpp
src/Remote/: Remote.h
src/Remote/AddNewRemote/: AddNewRemoteDialog.cpp  AddNewRemoteDialog.hpp  ChoseRemoteDialog.cpp  ChoseRemoteDialog.hpp  RemoteConfigParamsFrame.cpp  RemoteConfigParamsFrame.hpp  RemoteWidgetParam.cpp  RemoteWidgetParam.hpp
src/Remote/AddNewRemote/Alias/: AliasRemoteConfigParamsFrame.cpp  AliasRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/Box/: BoxRemoteConfigParamsFrame.cpp  BoxRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/Cmd/: CmdRemoteConfigParamsFrame.cpp  CmdRemoteConfigParamsFrame.hpp  CmdTextEdit.cpp  CmdTextEdit.hpp
src/Remote/AddNewRemote/Crypt/: CryptRemoteConfigParamsFrame.cpp  CryptRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/DropBox/: DropboxRemoteConfigParamsFrame.cpp  DropboxRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/Ftp/: FtpRemoteConfigParamsFrame.cpp  FtpRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/GoogleDrive/: GoogleDriveRemoteConfigParamsFrame.cpp  GoogleDriveRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/Local/: LocalRemoteConfigParamsFrame.cpp  LocalRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/Mega/: MegaRemoteConfigParamsFrame.cpp  MegaRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/OneDrive/: OneDriveRemoteConfigParamsFrame.cpp  OneDriveRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/OpenDrive/: OpenDriveRemoteConfigParamsFrame.cpp  OpenDriveRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/Pcloud/: PcloudRemoteConfigParamsFrame.cpp  PcloudRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/RemoteFrame/: RemoteConfigParamsFrame.cpp  RemoteConfigParamsFrame.hpp  RemoteFrame.cpp  RemoteFrame.hpp
src/Remote/AddNewRemote/RemoteFrame/GoogleDrive/: GoogleDriveRemoteConfigParamsFrame.cpp  GoogleDriveRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/Sftp/: SftpRemoteConfigParamsFrame.cpp  SftpRemoteConfigParamsFrame.hpp
src/Remote/AddNewRemote/Smb/: SmbRemoteConfigParamsFrame.cpp  SmbRemoteConfigParamsFrame.hpp
src/Remote/ListRemote/: ListRemoteWidget.cpp  ListRemoteWidget.hpp  RemoteWidget.cpp  RemoteWidget.hpp
src/Search/: FilterSearchGroupBox.cpp  FilterSearchGroupBox.hpp  SearchRow.cpp  SearchRow.hpp  SearchTableItem.cpp  SearchTableItem.hpp  SearchTableModel.cpp  SearchTableModel.hpp  SearchTableView.cpp  SearchTableView.hpp  SearchWidget.cpp  SearchWidget.hpp
src/Sync/: Sync.hpp  SyncRow.cpp  SyncRow.hpp  SyncTableItem.cpp  SyncTableItem.hpp  SyncTableModel.cpp  SyncTableModel.hpp  SyncTableView.cpp  SyncTableView.hpp
src/Task/: TaskItem.cpp  TaskItem.hpp  TaskRow.cpp  TaskRow.hpp  TaskRowChild.cpp  TaskRowChild.hpp  TaskRowParent.cpp  TaskRowParent.hpp  TaskTreeView.cpp  TaskTreeView.hpp
src/Utility/: Utility.cpp  Utility.hpp
